--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,91 +1,191 @@
-/* Basic CSS reset */
-*,
-:after,
-:before {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
-}
+    /* Basic CSS reset */
+    *,
+    :after,
+    :before {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        box-sizing: border-box;
+    }
 
-.page__body {
-    font-family: Arial, Helvetica, sans-serif;
-    max-width: 550px;
-    margin: 0 auto;
-    border: 1px solid lightgrey;
-    /* background-color: #FAFAFA; */
-}
+    .page__body {
+        font-family: Arial, Helvetica, sans-serif;
+        max-width: 550px;
+        margin: 0 auto;
+        border: 1px solid lightgrey;
+        /* background-color: #FAFAFA; */
+    }
 
-main {
-}
+    main {}
 
-/* Header section */
+    /* Header section */
 
-.navigation_container {
-    border-bottom: 2px solid #84C02C;
-    height: 100px;
-    max-width: 550px;
-    margin: 0 auto;
-}
+    .navigation_container {
+        border-bottom: 2px solid #84C02C;
+        height: 100px;
+        max-width: 550px;
+        margin: 0 auto;
+    }
 
-.menuitems_container {
-    max-width: 120px;
-    margin: 0 auto;
-}
+    .menuitems_container {
+        display: inline-block;
+        max-width: 120px;
+        margin: 0 auto;
+    }
 
-.ravnsbjerg_kollegiet {
-    font-family: Rockwell, Helvetica, sans-serif;
-    color: #84C02C;
-    font-size: 30px;
-    padding-top: 10px;
-    margin-left: -180px;
-}
+    .ravnsbjerg_kollegiet {
+        font-family: Rockwell, Helvetica, sans-serif;
+        color: #84C02C;
+        font-size: 30px;
+        padding-top: 10px;
+        padding-left: 20px;
+    }
 
-/* Footer section */
+    /* Menu icon */
 
-.page_footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height: 160px;
-    align-items: flex-start;
-    text-align: left;
-    border-top: 2px solid #2A2A2A;
-    padding-top: 20px;
-    bottom: 0;
-    font-family: 'Roboto', sans-serif;
-    color: #2A2A2A;
-    line-height: 1.5;
-}
+    .icon_container {
+        display: inline-block;
+        cursor: pointer;
+        float: right;
+        padding: 30px 25px;
+    }
 
-.footer_card1 {
-    margin-left: 20px;
-}
+    .bar1,
+    .bar2,
+    .bar3 {
+        width: 35px;
+        height: 5px;
+        background-color: #84C02C;
+        margin: 6px 0;
+        transition: 0.4s;
+    }
 
-.footer_heading {
-    color: #2A2A2A;
-    font-weight: bolder;
-    font-size: 17px;
-    margin-bottom: 10px;
-}
+    .change .bar1 {
+        -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+        transform: rotate(-45deg) translate(-9px, 6px);
+    }
 
-.footer_paragraph {
-    font-size: 14px;
-}
+    .change .bar2 {
+        opacity: 0;
+    }
 
-.footer_card2 {
-    margin-right: 70px;
-}
+    .change .bar3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px);
+        transform: rotate(45deg) translate(-8px, -8px);
+    }
 
-.flag1 {
-    position: absolute;
-    width: 50px;
-    margin-left: -140px;
-}
+    /* Body */
 
-.flag2 {
-    position: absolute;
-    width: 50px;
-    height: 33px;
-    margin-left: -80px;
-}
+    .home_section {
+        height: 490px;
+    }
+
+    /* Style the tab */
+    .tab {
+        float: left;
+        border: 1px solid #ccc;
+        background-color: #f1f1f1;
+        width: 30%;
+        /*height: 300px;*/
+        height: 100%;
+        /*position: fixed;*/
+    }
+
+    /* Style the buttons inside the tab */
+    .tab button {
+        display: block;
+        background-color: inherit;
+        color: black;
+        padding: 22px 16px;
+        width: 100%;
+        border: none;
+        outline: none;
+        text-align: left;
+        cursor: pointer;
+        transition: 0.3s;
+        font-size: 17px;
+    }
+
+    /* Change background color of buttons on hover */
+    .tab button:hover {
+        background-color: #ddd;
+    }
+
+    /* Create an active/current "tab button" class */
+    .tab button.active {
+        background-color: #ccc;
+    }
+
+    /* Style the tab content */
+    .tabcontent {
+        float: left;
+        padding: 0px 12px;
+        border: 1px solid #ccc;
+        width: 70%;
+        border-left: none;
+        height: 100%;
+        overflow: auto;
+    }
+
+    /* Footer section */
+
+    .page_footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        height: 160px;
+        align-items: flex-start;
+        text-align: left;
+        border-top: 2px solid #2A2A2A;
+        padding-top: 5px;
+        bottom: 0;
+        font-family: 'Roboto', sans-serif;
+        color: #2A2A2A;
+        line-height: 1.5;
+    }
+
+    .footer_column1 {
+        float: left;
+        width: 40%;
+        padding: 10px;
+    }
+
+    .footer_column2 {
+        float: left;
+        width: 35%;
+        padding: 10px;
+        padding-bottom: 0px;
+    }
+
+    .footer_column3 {
+        float: left;
+        width: 25%;
+        padding: 10px;
+    }
+
+    .footer_row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    .footer_heading {
+        color: #2A2A2A;
+        font-weight: bolder;
+        font-size: 17px;
+        margin-bottom: 10px;
+    }
+
+    .footer_paragraph {
+        font-size: 14px;
+    }
+
+    .flag1 {
+        width: 50px;
+        padding-left: -10px;
+    }
+
+    .flag2 {
+        width: 50px;
+        height: 33px;
+    }
