--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -76,8 +76,145 @@
 
     /* Body */
 
-    .home_section {
+    .sections {
         height: 490px;
+    }
+
+    /* Home section */
+
+    .home_section {
+        background-color: #B0DC70;
+        height: 100%;
+    }
+
+    .heading1 {
+        font-family: 'Roboto', sans-serif;
+        font-weight: bold;
+        margin-top: 20px;
+        text-align: center;
+    }
+
+    .home_para {
+        font-family: 'Roboto', sans-serif;
+        font-size: 15px;
+        margin: 0 auto;
+        max-width: 100%;
+        text-align: left;
+    }
+
+    /* Slideshow */
+    * {
+        box-sizing: border-box
+    }
+
+    /* Slideshow container */
+    .slideshow-container {
+        max-width: 350px;
+        position: relative;
+        margin: 20px auto 0 auto;
+    }
+
+    /* Hide the images by default */
+    .mySlides {
+        display: none;
+    }
+
+    /* Next & previous buttons */
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        margin-top: -22px;
+        padding: 16px;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+    }
+
+    /* Position the "next button" to the right */
+    .next {
+        right: 0;
+        border-radius: 3px 0 0 3px;
+    }
+
+    /* On hover, add a black background color with a little bit see-through */
+    .prev:hover,
+    .next:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    /* Caption text */
+    .text {
+        color: #f2f2f2;
+        font-size: 15px;
+        padding: 8px 12px;
+        position: absolute;
+        bottom: 8px;
+        width: 100%;
+        text-align: center;
+    }
+
+    /* Number text (1/3 etc) */
+    .numbertext {
+        color: #2A2A2A;
+        font-family: 'Roboto', sans-serif;
+        font-size: 12px;
+        padding: 8px 12px;
+        position: absolute;
+        top: 0;
+    }
+
+    /* The dots/bullets/indicators */
+    .dot {
+        cursor: pointer;
+        height: 15px;
+        width: 15px;
+        margin-top: -500px;
+        margin-bottom: 150px;
+        margin-right: 2px;
+        margin-left: 2px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-flex;
+        transition: background-color 0.6s ease;
+    }
+
+    .active,
+    .dot:hover {
+        background-color: #717171;
+    }
+
+    /* Fading animation */
+    .fade {
+        -webkit-animation-name: fade;
+        -webkit-animation-duration: 1.5s;
+        animation-name: fade;
+        animation-duration: 1.5s;
+    }
+
+    @-webkit-keyframes fade {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
+    }
+
+    @keyframes fade {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
     }
 
     /* Style the tab */
@@ -120,12 +257,16 @@
     .tabcontent {
         float: left;
         padding: 0px 12px;
-        border: 1px solid #ccc;
+        border: 1px solid lightgrey;
         width: 70%;
         border-left: none;
         height: 100%;
         overflow: auto;
+        background-color: #B0DC70;
+        display: flex;
+        flex-direction: column;
     }
+
 
     /* Footer section */
 
@@ -137,36 +278,15 @@
         align-items: flex-start;
         text-align: left;
         border-top: 2px solid #2A2A2A;
-        padding-top: 5px;
+        padding-top: 20px;
         bottom: 0;
         font-family: 'Roboto', sans-serif;
         color: #2A2A2A;
         line-height: 1.5;
     }
 
-    .footer_column1 {
-        float: left;
-        width: 40%;
-        padding: 10px;
-    }
-
-    .footer_column2 {
-        float: left;
-        width: 35%;
-        padding: 10px;
-        padding-bottom: 0px;
-    }
-
-    .footer_column3 {
-        float: left;
-        width: 25%;
-        padding: 10px;
-    }
-
-    .footer_row:after {
-        content: "";
-        display: table;
-        clear: both;
+    .footer_card1 {
+        margin-left: 20px;
     }
 
     .footer_heading {
@@ -180,12 +300,19 @@
         font-size: 14px;
     }
 
+    .footer_card2 {
+        margin-right: 70px;
+    }
+
     .flag1 {
+        position: absolute;
         width: 50px;
-        padding-left: -10px;
+        margin-left: -140px;
     }
 
     .flag2 {
+        position: absolute;
         width: 50px;
         height: 33px;
+        margin-left: -80px;
     }
