--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -167,12 +167,14 @@
     }
 
     /* The dots/bullets/indicators */
+    .dot_div {
+        z-index: 2;
+    }
+
     .dot {
         cursor: pointer;
-        height: 15px;
-        width: 15px;
-        margin-top: -500px;
-        margin-bottom: 150px;
+        height: 10px;
+        width: 10px;
         margin-right: 2px;
         margin-left: 2px;
         background-color: #bbb;
@@ -217,9 +219,10 @@
     /* Style the tab */
     .tab {
         float: left;
-        border: 1px solid #ccc;
-        background-color: #f1f1f1;
-        width: 30%;
+        position: relative;
+        /*border: 1px solid #ccc;*/
+        background-color: white;
+        width: 25%;
         /*height: 300px;*/
         height: 100%;
         /*position: fixed;*/
@@ -238,6 +241,7 @@
         cursor: pointer;
         transition: 0.3s;
         font-size: 17px;
+        z-index: 1;
     }
 
     /* Change background color of buttons on hover */
@@ -255,13 +259,50 @@
         float: left;
         padding: 0px 12px;
         border: 1px solid lightgrey;
-        width: 70%;
+        width: 75%;
         border-left: none;
         height: 100%;
         overflow: auto;
         background-color: white;
         display: flex;
         flex-direction: column;
+    }
+
+    /* Different tab links */
+
+    #mySidenav button {
+        position: absolute;
+        left: -92px;
+        transition: 0.3s;
+        padding: 15px;
+        text-decoration: none;
+        font-size: 20px;
+        color: white;
+        border-radius: 0 5px 5px 0;
+    }
+
+    #mySidenav button:hover {
+        left: 0px;
+    }
+
+    #about {
+        top: 40px;
+        background-color: #FFE600;
+    }
+
+    #blog {
+        top: 100px;
+        background-color: #FFE600;
+    }
+
+    #projects {
+        top: 160px;
+        background-color: #FFE600;
+    }
+
+    #contact {
+        top: 220px;
+        background-color: #FFE600;
     }
 
     /* Accordion */
@@ -304,6 +345,16 @@
         max-height: 0;*/
         overflow: hidden;
         transition: max-height 0.2s ease-out;
+    }
+
+    .white_stripe {
+        position: absolute;
+        width: 99px;
+        height: 500px;
+        top: 0;
+        margin-left: -100px;
+        z-index: 10;
+        background-color: white;
     }
 
     /* ---FOOTER SECTION--- */
