--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -9,7 +9,7 @@
     }
 
     .page__body {
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: 'Roboto', sans-serif;
         max-width: 550px;
         margin: 0 auto;
         border: 1px solid lightgrey;
@@ -80,12 +80,17 @@
         height: 490px;
     }
 
+.menu_button {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+
     /* Home section */
 
     .heading1 {
         font-family: 'Roboto', sans-serif;
         font-size: 1.17em;
-        font-weight: bold;
+        font-weight: bolder;
         margin-top: 20px;
         margin-bottom: 20px;
         text-align: center;
@@ -94,7 +99,7 @@
     .home_para {
         font-family: 'Roboto', sans-serif;
         font-size: 15px;
-        margin: 0 auto;
+        margin-left: 16px;
         max-width: 100%;
         text-align: left;
     }
@@ -221,7 +226,7 @@
         float: left;
         position: relative;
         /*border: 1px solid #ccc;*/
-        background-color: white;
+        background-color: #84C02C;
         width: 25%;
         /*height: 300px;*/
         height: 100%;
@@ -263,7 +268,7 @@
         border-left: none;
         height: 100%;
         overflow: auto;
-        background-color: white;
+        background-color: #84C02C;
         display: flex;
         flex-direction: column;
     }
@@ -357,6 +362,38 @@
         z-index: 10;
         background-color: white;
     }
+
+    /* ---FACILITIES SECTION--- */
+
+.fac_heading {
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.fac_image1 {
+    width: 380px;
+    margin-bottom: 10px;
+    border: 1px solid #2A2A2A;
+}
+
+.fac_description1 {
+    font-family: 'Roboto', sans-serif;
+    margin-bottom: 10px;
+}
+
+.fac_image2 {
+    height: 350px;
+    margin-bottom: 10px;
+    border: 1px solid #2A2A2A;
+}
+
+.fac_image3 {
+    height: 160px;
+    margin-bottom: 10px;
+    border: 1px solid #2A2A2A;
+}
 
     /* ---FOOTER SECTION--- */
 
