--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -74,6 +74,11 @@
         transform: rotate(45deg) translate(-8px, -8px);
     }
 
+    .menu_icon {
+        display: none;
+    }
+
+
     /* ----BODY---- */
 
     .sections {
@@ -100,15 +105,16 @@
     }
 
     /* Slideshow */
-    * {
-        box-sizing: border-box
-    }
 
     /* Slideshow container */
     .slideshow-container {
         max-width: 350px;
         position: relative;
         margin: 20px auto 0 auto;
+    }
+
+    .slideshow-container div:first-child {
+        display: block;
     }
 
     /* Hide the images by default */
@@ -185,7 +191,7 @@
 
     .active,
     .dot:hover {
-        background-color: #717171;
+        background-color: #84C02C;
     }
 
     /* Fading animation */
@@ -193,12 +199,12 @@
         -webkit-animation-name: fade;
         -webkit-animation-duration: 1.5s;
         animation-name: fade;
-        animation-duration: 1.5s;
+        /*animation-iteration-count: infinite;*/
     }
 
     @-webkit-keyframes fade {
         from {
-            opacity: .4
+            opacity: .6
         }
 
         to {
@@ -208,7 +214,7 @@
 
     @keyframes fade {
         from {
-            opacity: .4
+            opacity: .6
         }
 
         to {
