--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -21,7 +21,7 @@
     /* ---HEADER SECTION--- */
 
     .navigation_container {
-        border-bottom: 2px solid #84C02C;
+        border-bottom: 2px solid #2A2A2A;
         height: 100px;
         max-width: 550px;
         margin: 0 auto;
@@ -315,6 +315,8 @@
     /* Accordion */
     .accordion {
         background-color: #eee;
+        font-family: 'Roboto', sans-serif;
+        font-weight: bold;
         color: black;
         cursor: pointer;
         padding: 18px;
@@ -345,8 +347,9 @@
     }
 
     .panel {
-        padding: 0 18px;
         background-color: white;
+        padding: 20px 18px;
+        font-family: 'Roboto', sans-serif;
         /*display: none;
         max-height: 0;*/
         overflow: hidden;
@@ -394,6 +397,19 @@
     margin-bottom: 10px;
     border: 1px solid #2A2A2A;
 }
+
+    /* ---NEWS SECTION--- */
+
+.news_image {
+    width: 100%;
+}
+
+.covid_heading {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
 
     /* ---FOOTER SECTION--- */
 
